frame/support/test/tests/pallet_ui/duplicate_store_attr.stderr
error: Invalid pallet::pallet, multiple argument pallet::generate_store found
  --> $DIR/duplicate_store_attr.rs:12:33
   |
12 |     #[pallet::generate_store(trait Store)]
   |                                    ^^^^^
